--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hoplite Keyboard</string>
+    <string name="app_name">Hoplite Polytonic Greek Keyboard</string>
         <string name="simple_ime">Hoplite Keyboard</string>
         <string name="subtype_en_US">English (US)</string>
 </resources>
